--- a/files/main.html
+++ b/files/main.html
@@ -3,54 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=0.5">
     <title>The Hat Animation Control</title>
-    <style>
-        body {
-            zoom: 2;
-            background-color: #121212;
-            color: #e0e0e0;
-            font-family: Arial, sans-serif;
-            text-align: center;
-            padding: 20px;
-            max-width: 400px;
-            margin: auto;
-        }
-        h1 {
-            margin-bottom: 20px;
-            font-size: 24px;
-        }
-        button {
-            background-color: #1f1f1f;
-            color: #e0e0e0;
-            border: 1px solid #444;
-            padding: 10px 20px;
-            margin: 10px 0;
-            font-size: 18px;
-            cursor: pointer;
-            border-radius: 5px;
-            width: 100%;
-        }
-        button:hover {
-            background-color: #333;
-        }
-        #brightness-label {
-            margin-bottom: 10px;
-            font-size: 18px;
-        }
-        #brightness-slider {
-            width: 100%;
-        }
-        #console {
-            background-color: #1e1e1e;
-            color: #80cbc4;
-            border: 1px solid #444;
-            padding: 10px;
-            margin-top: 20px;
-            height: 200px;
-            overflow-y: hidden;
-            text-align: left;
-            font-size: 12px;
-        }
-    </style>
+    <link rel="stylesheet" href="css.css">
 </head>
 <body>
     <h1>ESP32 Animation Control</h1>
