--- a/data/main.html
+++ b/data/main.html
@@ -6,6 +6,54 @@
     <link rel="stylesheet" href="css.css">
 </head>
 <body>
+    <style>
+        body {
+            zoom: 2;
+            background-color: #121212;
+            color: #e0e0e0;
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 20px;
+            max-width: 400px;
+            margin: auto;
+        }
+        h1 {
+            margin-bottom: 20px;
+            font-size: 24px;
+        }
+        button {
+            background-color: #1f1f1f;
+            color: #e0e0e0;
+            border: 1px solid #444;
+            padding: 10px 20px;
+            margin: 10px 0;
+            font-size: 18px;
+            cursor: pointer;
+            border-radius: 5px;
+            width: 100%;
+        }
+        button:hover {
+            background-color: #333;
+        }
+        #brightness-label {
+            margin-bottom: 10px;
+            font-size: 18px;
+        }
+        #brightness-slider {
+            width: 100%;
+        }
+        #console {
+            background-color: #1e1e1e;
+            color: #80cbc4;
+            border: 1px solid #444;
+            padding: 10px;
+            margin-top: 20px;
+            height: 200px;
+            overflow-y: hidden;
+            text-align: left;
+            font-size: 12px;
+        }
+    </style>
     <h1>ESP32 Animation Control</h1>
     <br>
     <button onclick="sendCommand('0')">Turn Off</button><br>
@@ -18,7 +66,7 @@
     <div id="text-input"></div>
     <div id="brightness-label">Brightness: 10%</div>
     <br>
-    <input id="brightness-slider" type="range" min="0" max="96" value="10" onchange="updateBrightness(this.value)">
+    <input id="brightness-slider" type="range" min="0" max="255" value="10" onchange="updateBrightness(this.value)">
     <div id="Speed-label">Speed: 10</div>
     <input id="speed-slider" type="range" min="5" max="25" value="10" onchange="updateSpeed(this.value)">
     <div id="console"></div>
@@ -34,7 +82,7 @@
         }
         function updateBrightness(value) {
             const label = document.getElementById('brightness-label');
-            label.textContent = `Brightness: ${Math.round((value / 256) * 100)}%`;
+            label.textContent = `Brightness: ${Math.round((value / 255) * 100)}%`;
             fetch('/brightness?b=' + value)
                 .then(response => response.text())
                 .then(data => {
@@ -44,8 +92,8 @@
                 });
         }
         function updateSpeed(value) {
-            const label = document.getElementById('speed-label');
-            label.textContent = `Speed: ${Math.round(value)}`;
+            const label = document.getElementById('Speed-label');
+            label.textContent = `Speed: ${value}`;
             fetch('/speed?b=' + value)
                 .then(response => response.text())
                 .then(data => {
@@ -53,7 +101,8 @@
                     consoleDiv.innerHTML += `<div>ESP: ${data}</div>`;
                     consoleDiv.scrollTop = consoleDiv.scrollHeight;
                 });
-        }        
+        }
+</script>       
     </script>
 </body>
 </html>
