--- a/data/main.html
+++ b/data/main.html
@@ -61,6 +61,7 @@
         <button onclick="setAnimation(1)">Pride</button>
         <button onclick="setAnimation(2)">VIP</button>
         <button onclick="setAnimation(3)">EDM</button>
+        <button onclick="setAnimation(3)">Text</button>
         <br>
         <label for="brightness">Brightness: </label>
         <br>
